@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-25T16:22:31Z",
-  "count_outdated" : 377,
-  "uniques_outdated" : 237,
-  "count" : 405,
+  "timestamp" : "2022-07-26T01:45:36Z",
+  "count_outdated" : 379,
+  "uniques_outdated" : 238,
+  "count" : 406,
   "uniques" : 254,
   "clones" : [
-    {
-      "timestamp": "2022-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 2,
